# form-auto-sender

./: .env  .gitignore  Cargo.toml  Makefile  README.md  benchmark.csv  benchmark.py  benchmark1.csv  export.py  main.tf  package-lock.json  package.json  pytest.ini  requirements.txt  results.csv  results_1.csv  results_2.csv  results_3.csv  results_4.csv  results_5.csv  results_6.csv  results_7.csv  run_benchmark.bat  setup.py  setup.sh  t1.txt  terraform.tfstate  terraform.tfstate.backup  tsconfig.json  url_samples.csv  urls-auto-form-results.csv  urls-auto-form.txt  urls-results.csv  urls.csv  urls.txt
ansible/: db.yml  deploy.yml  inventory.ini  monitoring.yml
contact_discovery/: Cargo.toml  Makefile
contact_discovery/src/: app_state.rs  fetch.rs  heuristics.rs  lib.rs  main.rs  scoring.rs  sitemap.rs
contact_discovery/src/handlers/: discover.rs  mod.rs  scoring.rs
contact_submitter/: Makefile  contacts.jsonl  package-lock.json  package.json  submissions.csv  targets.txt  tsconfig.json
form_auto_sender/: __init__.py  constants.py  form.py  models.py  utils.py
gateway/: Makefile  package-lock.json  package.json
src/: crawler.ts  fillForm.ts  index.ts  routes.ts  run-with-server.ts  run.ts  types.ts  worker.ts
streamx_importer/: .gitignore  package-lock.json  package.json
tests/: .gitignore  cleaning.py  mix.py  package-lock.json  package.json  result.pfsd  submit_jobs.js  test_cache.py  test_contact_discovery.py  test_create_profile.py  test_embedding.py  test_form.py  test_matching.py  test_out.txt  test_redis.py  test_submit.py  test_submit_jobs.py  (+2 more)
(+61 files in other folders)
